--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,6 +1,6 @@
 [user]
-	name = {{ .user.name }}
-	email = {{ .user.email }}
+	name = Richtman, Ariel
+	email = ariel.richtman@silverrailtech.com
 [rerere]
 	enabled = true
 [core]
