--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -2,14 +2,14 @@
 data:
   user:
     email: {{ promptString "git username" }}
-    name: {{ promptString "Git Name" | quote }}
+    name: {{ promptString "git Name" | quote }}
 
   git:
     autoPush: true
   auth:
     pypi:
       username: {{ promptString "pypi username" }}
-      password: {{ promptString "pypi password }}
+      password: {{ promptString "pypi password" }}
     gitlab:
       pat: {{ promptString "gitlab pat" }}
     docker:
