add symlink for docker config

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,4 +1,5 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
 echo "Running Linux package install"
+mkdir -p ~/.docker && ln -s ~/.cache/containers/auth.json ~/.docker/config.json
 {{ end }}
