fix docker environment variable

--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -24,7 +24,7 @@ export EDITOR=nano
 
 export PIP_INDEX_URL=https://{{ .auth.pypi.username }}:{{ .auth.pypi.password }}@{{ .pypi.url }}
 export GITLAB_PRIVATE_TOKEN={{ .auth.gitlab.pat }}
-export DOCKER_AUTH_CONFIG=$(<~/.docker/config.json)
+export DOCKER_AUTH_CONFIG=$(cat ~/.docker/config.json | tr --complement --delete [:graph:])
 export GITHUB_USERNAME=arichtman
 export AWS_PAGER=""
 
