--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -5,7 +5,8 @@
 	enabled = true
 [core]
 	autocrlf = input
+        excludesfile = $HOME/.gitignore
 [help]
-	autocorrect = 20
+	autocorrect = 15
 [credential]
 	helper = store
