--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,14 +1,19 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
 echo "Running Linux package install"
+# Allow docker to use podman's auth file
 mkdir -p ~/.docker && ln -s ~/.cache/containers/auth.json ~/.docker/config.json
+# Symlink so rsync etc can benefit from user's gitignore
+ln -s $HOME/.gitignore $HOME/.cvsignore
+# Debian family install
 {{ if eq ( coalesce ( get .chezmoi.osRelease "idLike" ) .chezmoi.osRelease.id ) "debian" -}}
 sudo apt update
 sudo apt upgrade -y
+# Jammy install podman from out-the-box repositories
 {{ if eq ( coalesce ( get .chezmoi.osRelease "ubuntuCodename" ) .chezmoi.osRelease.versionCodename ) "jammy" -}}
 sudo apt install -y podman
 {{- end }}
-
+# Focal add repository and install podman
 {{ if eq ( coalesce ( get .chezmoi.osRelease "ubuntuCodename" ) .chezmoi.osRelease.versionCodename ) "focal" -}}
 echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
 curl -L "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/Release.key" | sudo apt-key add -
