--- a/dot_config/containers/registries.conf.tmpl
+++ b/dot_config/containers/registries.conf.tmpl
@@ -1,1 +1,1 @@
-unqualified-search-registries = [ "{{ .auth.docker.entry1.url }}" ]
+unqualified-search-registries = [ "artifactory-bne.silverrail.io:5001" ]
