--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -19,13 +19,13 @@ fi
 
 . ~/.aliases.d/*
 
-export XDG_RUNTIME_DIR=~/.cache
+#export XDG_RUNTIME_DIR=~/.cache
 export EDITOR=nano
+export AWS_PAGER=""
 
-export PIP_INDEX_URL=https://{{ .auth.pypi.username }}:{{ .auth.pypi.password }}@{{ .pypi.url }}
+export PIP_INDEX_URL=https://{{ .auth.artifactory.username }}:{{ .auth.artifactory.password }}@artifactory-bne.silverrail.io/artifactory/api/pypi/python-srt-virtual/simple
 export GITLAB_PRIVATE_TOKEN={{ .auth.gitlab.pat }}
 export DOCKER_AUTH_CONFIG=$(cat ~/.docker/config.json | tr --complement --delete [:graph:])
 export GITHUB_USERNAME=arichtman
-export AWS_PAGER=""
 
 echo "Sourced .profile"
