--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -4,10 +4,10 @@
 echo "Running Linux package install"
 
 # Allow docker to use podman's auth file
-mkdir -p ~/.docker && ln -s ~/.cache/containers/auth.json ~/.docker/config.json
+mkdir -p ~/.docker && ln --force --symbolic ~/.cache/containers/auth.json ~/.docker/config.json
 
 # Symlink so rsync etc can benefit from user's gitignore
-ln -s $HOME/.gitignore $HOME/.cvsignore
+ln --force --symbolic $HOME/.gitignore $HOME/.cvsignore
 
 # Debian family install
 {{ if eq ( coalesce ( get .chezmoi.osRelease "idLike" ) .chezmoi.osRelease.id ) "debian" -}}
