--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -11,16 +11,17 @@ ln --force --symbolic $HOME/.gitignore $HOME/.cvsignore
 
 # Debian family install
 {{ if eq ( coalesce ( get .chezmoi.osRelease "idLike" ) .chezmoi.osRelease.id ) "debian" -}}
-# Configure work repository
+
+# Configure work repository, remote depending on distro
 {{ if eq .chezmoi.osRelease.id "ubuntu" -}}
-sudo apt-add-repository "deb [trusted=yes] https://artifactory-bne.silverrail.io/artifactory/Ubuntu-Virtual $(lsb_release -sc) main"
+sudo apt-add-repository --yes "deb [trusted=yes] https://artifactory-bne.silverrail.io/artifactory/Ubuntu-Virtual $(lsb_release -sc) main"
 {{ else -}}
-sudo apt-add-repository "deb [trusted=yes] https://artifactory-bne.silverrail.io/artifactory/Debian-Virtual $(lsb_release -sc) main"
+sudo apt-add-repository --yes "deb [trusted=yes] https://artifactory-bne.silverrail.io/artifactory/Debian-Virtual $(lsb_release -sc) main"
 {{ end -}}
 ln --force --symbolic $HOME/.config/apt/auth.conf
 
 sudo apt update
-sudo apt upgrade -y
+sudo apt upgrade --yes
 
 # Jammy install podman from out-the-box repositories
 {{ if eq ( coalesce ( get .chezmoi.osRelease "ubuntuCodename" ) .chezmoi.osRelease.versionCodename ) "jammy" -}}
@@ -33,6 +34,7 @@ echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers
 curl -L "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/Release.key" | sudo apt-key add -
 sudo apt-get update
 sudo apt-get install -y podman
+
 {{- end }}
 {{- end }}
 {{- end }}
