--- a/dot_config/pypoetry/private_auth.toml.tmpl
+++ b/dot_config/pypoetry/private_auth.toml.tmpl
@@ -1,5 +1,6 @@
 [pypi-token]
 testpypi = {{ .auth.testpypi.token | quote }}
+pypi = {{ .auth.pypi.token | quote }}
 
 [http-basic]
 [http-basic.artifactory]
