--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -18,6 +18,7 @@ if [ -d "$HOME/.local/bin" ] ; then
 fi
 
 run-parts ~/.aliases.d
+. ~/.aliases.d/* 
 
 #export XDG_RUNTIME_DIR=~/.cache
 export EDITOR=nano
