--- a/private_dot_profile.tmpl
+++ b/private_dot_profile.tmpl
@@ -18,11 +18,7 @@ if [ -d "$HOME/.local/bin" ] ; then
 fi
 
 run-parts ~/.aliases.d
-# find refuses to use source alias and can't run .
-#alias source=.
-#find ~/.aliases.d -type f -exec source {} \; 
-. ~/.aliases.d/podman
-. ~/.aliases.d/git
+for f in ~/.aliases.d/*; do source $f; done
 
 export XDG_RUNTIME_DIR=~/.cache
 export EDITOR=nano
