--- a/private_dot_cache/private_containers/private_auth.json.tmpl
+++ b/private_dot_cache/private_containers/private_auth.json.tmpl
@@ -1,5 +1,5 @@
 {{- $artifactoryAuthstring := ( list .auth.artifactory.username ":" .auth.artifactory.password | join "" ) | b64enc  -}}
-{{- $gitlabAuthstring := ( list .auth.gitlab.username ":" .auth.gitlab.password | join "" ) | b64enc  -}}
+{{- $gitlabAuthstring := ( list .auth.gitlab.username ":" .auth.gitlab.token | join "" ) | b64enc  -}}
 {{- $dockerAuthstring := ( list .auth.docker.username ":" .auth.docker.password | join "" ) | b64enc  -}}
 {
         "auths": {
