--- a/dot_aws/private_config.tmpl
+++ b/dot_aws/private_config.tmpl
@@ -1,22 +1,18 @@
 [default]
-cli_pager=
-[profile nonprod]
+cli_pager = ""
+output = yaml
+[profile dev]
 region = ap-southeast-2
-output = yaml
-[profile iptis]
+[profile search]
 region = eu-west-1
-output = yaml
-[profile seek]
-output = yaml
+[profile silvercloud]
 region = eu-west-2
 [profile tcs-np]
 region = eu-west-1
-output = yaml
 [profile tcs-prod]
 region = eu-west-1
-output = yaml
 [profile protected]
 region = ap-southeast-2
-source_profile = nonprod
+source_profile = dev
 role_arn = arn:aws:iam::519990849220:role/ExternalAdministrator
 role_session_name = {{ .auth.artifactory.username }}
